[package]
name = "db_test"
version = "0.1.0"
edition = "2021"
description = "数据库测试"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio异步运行时
tokio = { version = "1.21.1", features = ["full"] }

# json相关
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

# 日志相关
log = "0.4.17"
fast_log = { version = "1.5.39", features = ["zip"] }

# 用于全局捕获异常(主要是简化代码，可以直接将异常往上抛出，但是也有局限，如果全部都往上抛，可能就不知道异常在哪了)
anyhow = "1.0.65"

# rocksdb = { version = "0.19.0", default-features = false, features = ["lz4"] }

# sled-tables用法比sled好用一点，不用限制那么死
sled-tables = { version = "0.2.2" }

# rusqlite，sqlite数据库相关
rusqlite = { version = "0.28.0", features = ["bundled"] }
# rusqlite = { path = "../rusqlite-0.28.0", features = ["bundled"] }

libsqlite3-sys = { version = "0.25.1", features = ["bundled", "bundled_bindings"] }
